--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Speed Ball Highscores</title>
+	
+	<center> <h1> Speed Ball Highscores </h1> </center>
 </head>
 <body>
 
