--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <title>Href Attribute Example</title>
   </head>
   <body>
-    <h1>Href Attribute Example</h1>
-    <p>
-      <a href="https://www.freecodecamp.org/contribute/">The freeCodeCamp Contribution Page</a> shows you how and where you can contribute to freeCodeCamp's community and growth.
-    </p>
+    <h1>Speed Ball Highscores</h1>
+    <ol>
+      Tsalemis: 215865110929
+      Tsalemis: 469234567
+    </ol>
   </body>
 </html>
