--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body>
     <h1>Speed Ball Highscores</h1>
     <ol>
-      Tsalemis: 215865110929
-      Tsalemis: 469234567
+      <li>Tsalemis: 215865110929</li>
+      <li>Tsalemis: 469234567</li>
     </ol>
   </body>
 </html>
