--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
-    <title>Href Attribute Example</title>
+    <title>SpeedBall Highscores</title>
   </head>
   <body>
     <h1>Speed Ball Highscores</h1>
+    
     <ol>
+      !-- begins_here
       <li>Tsalemis: 215865110929</li>
       <li>Tsalemis: 469234567</li>
     </ol>
