--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Speed Ball Highscores</h1>
     
     <ol>
-      !-- begins_here
+      <!-- begins_here-->
       <li>Tsalemis: 215865110929</li>
       <li>Tsalemis: 469234567</li>
     </ol>
