--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ol>
       <!-- begins_here-->
       <li>Tsalemis: 215865110929</li>
-      <li>Tsalemis: 469234567</li>
+      <li>Thalis: 469234567</li>
       <!-- ends_here-->
     </ol>
   </body>
