--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/thalis-ap/speedball-highscores.com/blob/main/templates/index.html">
+<meta http-equiv="refresh" content="0; url=https://thalis-ap.github.io/speedball-highscores.com/templates/index.html">
