--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://thalis-ap.github.io/speedball-highscores.com/templates/index.html">
+<!--meta http-equiv="refresh" content="0; url=https://thalis-ap.github.io/speedball-highscores.com/templates/index.html"-->
+<h1> Fuck </h1>
